# btj2023-day4

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
src/: ai.rs  bullets.rs  despawn_after.rs  draw.rs  main.rs  menu.rs  movement.rs  player.rs  utils.rs
wasm/: index.html
