[package]
name = "circles_madness"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.11", features = ["jpeg"] }
rand = "0.8.5"
bevy_vector_shapes = "0.5.0"
bevy_asset_loader = "0.17.0"


# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# bevy = { version = "0.11", features = ["dynamic_linking"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.11" }